--- a/src/pc/view/index.ejs
+++ b/src/pc/view/index.ejs
@@ -21,10 +21,12 @@
 
     <link rel="shortcut icon" href="images/common/favicon.ico">
     <link rel="apple-touch-icon-precomposed" href="images/common/apple-touch-icon-precomposed.png">
-
-    <% include parts/_header%>
+    <% include parts/_head%>
 </head>
 <body>
+    <h1>卓展2016 始動！</h1>
+    <p>8/19-21</p>
+    <p>@名古屋市立大学芸術工学部 芸工棟</p>
 <script src="js/app.js"></script>
 </body>
 </html>
