--- a/src/pc/view/index.ejs
+++ b/src/pc/view/index.ejs
@@ -26,7 +26,7 @@
 <body>
     <h1>卓展2016 始動！</h1>
     <p>8/19-21</p>
-    <p>@名古屋市立大学芸術工学部 芸工棟1~3F</p>
+    <p>@名古屋市立大学芸術工学部 芸工棟1F~3F</p>
 <script src="js/app.js"></script>
 </body>
 </html>
