--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -4,7 +4,23 @@
 	<% include _head %>
 </head>
 <body>
-	<h1>卓展2016のWEBサイト</h1>
+	<section id="banner">
+		<div class="symbols">
+			<img src="./images/top/01.png" alt="" class="symbol_01">
+			<img src="./images/top/02.png" alt="" class="symbol_02">
+			<img src="./images/top/03.png" alt="" class="symbol_03">
+			<img src="./images/top/04.png" alt="" class="symbol_04">
+			<img src="./images/top/05.png" alt="" class="symbol_05">
+			<img src="./images/top/06.png" alt="" class="symbol_06">
+			<img src="./images/top/07.png" alt="" class="symbol_07">
+			<img src="./images/top/08.png" alt="" class="symbol_08">
+			<img src="./images/top/09.png" alt="" class="symbol_09">
+			<img src="./images/top/10.png" alt="" class="symbol_10">
+			<img src="./images/top/11.png" alt="" class="symbol_11">
+			<img src="./images/top/12.png" alt="" class="symbol_12">
+		</div>
+		<!-- <h1 class="title"><img src="./images/top/takuten.png" alt=""></h1> -->
+	</section>
 	<% include _script %>
 </body>
 </html>
