--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -6,3 +6,40 @@
 
 /* 以下にスタイルを記述
 ************************* */
+body {
+	background-color: #EBEFF3;
+}
+
+#banner {
+	.symbols {
+		// width: 100vw;
+		// height: 100vh;
+		width: 1280px;
+		height: 680px;
+
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translateX(-50%) translateY(-50%);
+
+		img {
+			position: absolute;
+			&.symbol_01 { top: 40px; left: 40px; }
+			&.symbol_02 { top: 40px; left: 240px; }
+			&.symbol_03 { top: 240px; left: 40px; }
+			&.symbol_04 { top: 260px; left: 240px; }
+			&.symbol_05 { bottom: 40px; left: 40px; }
+			&.symbol_06 { bottom: 40px; left: 300px; }
+			&.symbol_07 { bottom: 40px; right: 400px; }
+			&.symbol_08 { bottom: 40px; right: 40px; }
+			&.symbol_09 { bottom: 210px; right: 40px; }
+			&.symbol_10 { bottom: 210px; right: 240px; }
+			&.symbol_11 { top: 120px; right: 40px; }
+			&.symbol_12 { top: 40px; right: 100px; }
+		}
+	}
+
+	.title {
+
+	}
+}
