--- a/app/source/ejs/_head.ejs
+++ b/app/source/ejs/_head.ejs
@@ -1,4 +1,12 @@
 <meta charset="UTF-8">
-<title>卓展2016</title>
-
+<title>卓展2016 | 名古屋市立大学芸術工学部で開催される展示会</title>
+<meta name="description" content="">
+<meta name="viewport" content="">
+<meta property="og:title" content="">
+<meta property="og:type" content="website">
+<meta property="og:url" content="">
+<meta property="og:image" content="">
+<meta property="og:description" content="">
 <link rel="stylesheet" href="./css/style.css">
+<link rel="icon" type="image/vnd.microsoft.icon" href="">
+<!-- アナリティクス忘れずに入れる -->
