その他のsection追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -19,7 +19,23 @@
 			<img src="./images/top/11.png" alt="" class="symbol_11">
 			<img src="./images/top/12.png" alt="" class="symbol_12">
 		</div>
-		<!-- <h1 class="title"><img src="./images/top/takuten.png" alt=""></h1> -->
+		<div class="title">
+			<div class="title-inner">
+				<img src="./images/top/takuten.png" alt="">
+			</div>
+		</div>
+	</section>
+	<section id="about">
+		<h2>卓展とは</h2>
+	</section>
+	<section id="map">
+		<h2>map</h2>
+	</section>
+	<section id="detail">
+		<h2>detail</h2>
+	</section>
+	<section id="access">
+		<h2>access</h2>
 	</section>
 	<% include _script %>
 </body>
