Revert "TOPの位置調整"
This reverts commit 4aa2a1adb8cdd9fb42175a1c8ae76cf173005e52.

--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -8,28 +8,28 @@
 ************************* */
 
 body {
-	background-color: #eff2f5;
+	background-color: #EBEFF3;
 }
 
 
 #banner {
 	height: 53.125vw;
 
-	.symbols {
+	.symbols {		
 		img {
 			position: absolute;
 			&.symbol_01 { top: 3vw; left: 3vw; width: 15.083vw; }
-			&.symbol_02 { top: 3vw; left: 19.5vw; width: 18.5vw; }
+			&.symbol_02 { top: 3vw; left: 21vw; width: 18.5vw; }
 			&.symbol_03 { top: 21vw; left: 3vw; width: 16.666vw; }
-			&.symbol_04 { top: 18vw; left: 18.5vw; width: 12.75vw; }
-			&.symbol_05 { top: 37.5vw; left: 3vw; width: 20.083vw; }
-			&.symbol_06 { top: 40.5vw; left: 27.5vw; width: 26.75vw; }
-			&.symbol_07 { top: 40.5vw; right: 29vw; width: 12.833vw; }
-			&.symbol_08 { top: 40.5vw; right: 3vw; width: 22.75vw; }
-			&.symbol_09 { top: 19.5vw; right: 3vw; width: 12vw; }
-			&.symbol_10 { top: 21vw; right: 19vw; width: 11.916vw; }
-			&.symbol_11 { top: 7.5vw; right: 3vw; width: 27.75vw; }
-			&.symbol_12 { top: 3vw; right: 9.5vw; width: 25.916vw; }
+			&.symbol_04 { top: 18vw; left: 20vw; width: 12.75vw; }
+			&.symbol_05 { top: 37vw; left: 3vw; width: 20.083vw; }
+			&.symbol_06 { top: 40vw; left: 28vw; width: 26.75vw; }
+			&.symbol_07 { top: 40vw; right: 29vw; width: 12.833vw; }
+			&.symbol_08 { top: 40vw; right: 3vw; width: 22.75vw; }
+			&.symbol_09 { top: 19vw; right: 3vw; width: 12vw; }
+			&.symbol_10 { top: 21vw; right: 20vw; width: 11.916vw; }
+			&.symbol_11 { top: 7vw; right: 3vw; width: 27.75vw; }
+			&.symbol_12 { top: 3vw; right: 11vw; width: 25.916vw; }
 		}
 	}
 
