symbolをランダムでフェードインさせるアニメーション

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -6,18 +6,18 @@
 <body>
 	<section id="banner">
 		<div class="symbols">
-			<img src="./images/top/01.png" alt="" class="symbol_01">
-			<img src="./images/top/02.png" alt="" class="symbol_02">
-			<img src="./images/top/03.png" alt="" class="symbol_03">
-			<img src="./images/top/04.png" alt="" class="symbol_04">
-			<img src="./images/top/05.png" alt="" class="symbol_05">
-			<img src="./images/top/06.png" alt="" class="symbol_06">
-			<img src="./images/top/07.png" alt="" class="symbol_07">
-			<img src="./images/top/08.png" alt="" class="symbol_08">
-			<img src="./images/top/09.png" alt="" class="symbol_09">
-			<img src="./images/top/10.png" alt="" class="symbol_10">
-			<img src="./images/top/11.png" alt="" class="symbol_11">
-			<img src="./images/top/12.png" alt="" class="symbol_12">
+			<img src="./images/top/01.png" alt="" class="js-randomFade symbol_01">
+			<img src="./images/top/02.png" alt="" class="js-randomFade symbol_02">
+			<img src="./images/top/03.png" alt="" class="js-randomFade symbol_03">
+			<img src="./images/top/04.png" alt="" class="js-randomFade symbol_04">
+			<img src="./images/top/05.png" alt="" class="js-randomFade symbol_05">
+			<img src="./images/top/06.png" alt="" class="js-randomFade symbol_06">
+			<img src="./images/top/07.png" alt="" class="js-randomFade symbol_07">
+			<img src="./images/top/08.png" alt="" class="js-randomFade symbol_08">
+			<img src="./images/top/09.png" alt="" class="js-randomFade symbol_09">
+			<img src="./images/top/10.png" alt="" class="js-randomFade symbol_10">
+			<img src="./images/top/11.png" alt="" class="js-randomFade symbol_11">
+			<img src="./images/top/12.png" alt="" class="js-randomFade symbol_12">
 		</div>
 		<div class="title">
 			<div class="title-inner">
