TOPアニメーションのdotsを追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -20,9 +20,8 @@
 			<img src="./images/top/12.png" alt="" class="js-randomFade symbol_12">
 		</div>
 		<div class="title">
-			<div class="title-inner">
-				<img src="./images/top/takuten.png" alt="">
-			</div>
+			<img class="takuten" src="./images/top/takuten.png" alt="">
+			<img class="dots" src="./images/top/dots.png" alt="">
 		</div>
 	</section>
 	<section id="about">
