各卓紹介の見本となる要素・スタイルを追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -25,23 +25,41 @@
 		</div>
 	</section>
 	<main id="main">
-		<section class="about">
-			<h2>卓展とは</h2>
-		</section>
-		<section class="map">
-			<h2>map</h2>
-		</section>
-		<section class="detail">
-			<h2>detail</h2>
-			<section class="branco">
-				<img src="" alt="">
+		<div class="main-inner">
+			<section class="about">
+				<h2>卓展とは</h2>
 			</section>
-		</section>
-		<section class="access">
-			<h2>access</h2>
-		</section>		
+			<section class="map">
+				<h2>map</h2>
+			</section>
+			<section class="intro">
+				<section id="branco" class="intro-detail js-parallax">
+					<div class="p-text intro-text">
+						<h3>ブランディングデザインを学ぶ。</h3>
+						<p>地域の商店街を参考に、店舗のブランドづくりの流れをグラフィックデザインの観点からみて学び、制作します。成果物は実在する店舗に新たな独自のコンセプトを設定したそれぞれのブランディングデザインに関わるもの全て。ロゴ、VI、パッケージなど必要なアプリケーションを、統一した世界観を持って制作することで様々な媒体への印刷の知識や素材の仕組みも勉強していきます。</p>	
+					</div>
+					<img class="p-logo" src="./images/detail/branco/logo.png" alt="">
+					<img class="p-img1" src="./images/detail/branco/1.png" alt="">
+					<img class="p-img2" src="./images/detail/branco/2.png" alt="">
+					<img class="p-img3" src="./images/detail/branco/3.png" alt="">
+				</section>
+				<section id="brica" class="intro-detail js-parallax">
+					<div class="p-text intro-text">
+						<h3>しょうめいをつくる</h3>
+						<p>照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜</p>	
+					</div>
+					<img class="p-logo" src="./images/detail/brica/logo.png" alt="">
+					<img class="p-img1" src="./images/detail/brica/1.png" alt="">
+					<img class="p-img2" src="./images/detail/brica/2.png" alt="">
+					<img class="p-img3" src="./images/detail/brica/3.png" alt="">
+				</section>
+			</section>
+			<section class="access">
+				<h2>access</h2>
+			</section>
+		</div>		
 	</main>
-	<aside id="sidebar">
+	<aside id="sidebar" class="fixed">
 		<nav>
 			<h1><img src="./images/common/menu.png" alt=""></h1>
 			<ul class="sidebar-menu">
