--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -26,13 +26,13 @@
 	</section>
 	<main id="main">
 		<div class="main-inner">
-			<section class="about">
+			<section class="about" id="about">
 				<h2>卓展とは</h2>
 			</section>
-			<section class="map">
+			<section class="map" id="map">
 				<h2>map</h2>
 			</section>
-			<section class="intro">
+			<section class="intro" id="intro">
 				<section id="branco" class="intro-detail js-parallax">
 					<div class="p-text intro-text" data-enllax-ratio=".01" data-enllax-type="foreground">
 						<h3>ブランディングデザインを学ぶ。</h3>
@@ -48,13 +48,13 @@
 						<h3>しょうめいをつくる</h3>
 						<p>照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜</p>
 					</div>
-					<img class="p-logo" src="./images/detail/brica/logo.png" alt="" data-enllax-ratio=".05" data-enllax-type="foreground">
-					<img class="p-img1" src="./images/detail/brica/1.png" alt="" data-enllax-ratio="-0.1" data-enllax-type="foreground">
+					<img class="p-logo" src="./images/detail/brica/logo.png" alt="" data-enllax-ratio=".01" data-enllax-type="foreground">
+					<img class="p-img1" src="./images/detail/brica/1.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground">
 					<img class="p-img2" src="./images/detail/brica/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground">
-					<img class="p-img3" src="./images/detail/brica/3.png" alt="" data-enllax-ratio=".05" data-enllax-type="foreground">
+					<img class="p-img3" src="./images/detail/brica/3.png" alt="" data-enllax-ratio=".02" data-enllax-type="foreground">
 				</section>
 			</section>
-			<section class="access">
+			<section class="access" id="access">
 				<h2>access</h2>
 			</section>
 		</div>		
