画像の背景（ドットとかストライプとか）を追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -36,22 +36,22 @@
 				<section id="branco" class="intro-detail js-parallax">
 					<div class="p-text intro-text" data-enllax-ratio=".01" data-enllax-type="foreground">
 						<h3>ブランディングデザインを学ぶ。</h3>
-						<p>地域の商店街を参考に、店舗のブランドづくりの流れをグラフィックデザインの観点からみて学び、制作します。成果物は実在する店舗に新たな独自のコンセプトを設定したそれぞれのブランディングデザインに関わるもの全て。ロゴ、VI、パッケージなど必要なアプリケーションを、統一した世界観を持って制作することで様々な媒体への印刷の知識や素材の仕組みも勉強していきます。</p>	
+						<p>地域の商店街を参考に、店舗のブランドづくりの流れをグラフィックデザインの観点からみて学び、制作します。成果物は実在する店舗に新たな独自のコンセプトを設定したそれぞれのブランディングデザインに関わるもの全て。ロゴ、VI、パッケージなど必要なアプリケーションを、統一した世界観を持って制作することで様々な媒体への印刷の知識や素材の仕組みも勉強していきます。</p>
 					</div>
-					<img class="p-logo" src="./images/detail/branco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground">
-					<img class="p-img1 b" src="./images/detail/branco/1.png" alt="" data-enllax-ratio="-0.1" data-enllax-type="foreground">
-					<img class="p-img2" src="./images/detail/branco/2.png" alt="" data-enllax-ratio=".1" data-enllax-type="foreground">
-					<img class="p-img3" src="./images/detail/branco/3.png" alt="" data-enllax-ratio=".05" data-enllax-type="foreground">
+					<div class="p-logo"><img src="./images/detail/branco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 b"><img src="./images/detail/branco/1.png" alt="" data-enllax-ratio="-0.1" data-enllax-type="foreground"></div>
+					<div class="p-img2 g"><img src="./images/detail/branco/2.png" alt="" data-enllax-ratio=".1" data-enllax-type="foreground"></div>
+					<div class="p-img3 s"><img src="./images/detail/branco/3.png" alt="" data-enllax-ratio=".05" data-enllax-type="foreground"></div>
 				</section>
 				<section id="brica" class="intro-detail js-parallax">
 					<div class="p-text intro-text" data-enllax-ratio=".1" data-enllax-type="foreground">
 						<h3>しょうめいをつくる</h3>
 						<p>照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜照明をつくります〜</p>
 					</div>
-					<img class="p-logo" src="./images/detail/brica/logo.png" alt="" data-enllax-ratio=".01" data-enllax-type="foreground">
-					<img class="p-img1" src="./images/detail/brica/1.png" alt="" data-enllax-ratio="0.05" data-enllax-type="foreground">
-					<img class="p-img2" src="./images/detail/brica/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground">
-					<img class="p-img3" src="./images/detail/brica/3.png" alt="" data-enllax-ratio=".02" data-enllax-type="foreground">
+					<div class="p-logo"><img src="./images/detail/brica/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 b"><img src="./images/detail/brica/1.png" alt="" data-enllax-ratio="-0.1" data-enllax-type="foreground"></div>
+					<div class="p-img2 g"><img src="./images/detail/brica/2.png" alt="" data-enllax-ratio=".1" data-enllax-type="foreground"></div>
+					<div class="p-img3 s"><img src="./images/detail/brica/3.png" alt="" data-enllax-ratio=".05" data-enllax-type="foreground"></div>
 				</section>
 			</section>
 			<section class="access" id="access">
