--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -87,14 +87,25 @@ $sidebar: 330px;
 		.p-img2,
 		.p-img3 {
 			position: absolute;
-			&.b:before {
+			&::after {
 				content: '';
 				display: block;
-				position: absolute;
-				z-index: 10;
-				width: 870px;
-				height: 1000px;
-				background: url('../images/detail/bg/b.png') repeat 0 0;
+				position: relative;
+				left: 25px;
+				bottom: 240px;
+				z-index: -1;
+				width: 100%;
+				height: 280px;
+				background: repeat 0 0;
+			}
+			&.b::after {
+				background-image: url('../images/detail/bg/b.png');
+			}
+			&.g::after {
+				background-image: url('../images/detail/bg/g.png');
+			}
+			&.s::after {
+				background-image: url('../images/detail/bg/s.png');
 			}
 		}
 		.intro-text {
