サイドバーのfixed - staticのステータス変更

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -59,9 +59,11 @@
 			</section>
 		</div>		
 	</main>
-	<aside id="sidebar" class="fixed">
+	<aside id="sidebar" class="static js-nav">
 		<nav>
-			<h1><img src="./images/common/menu.png" alt=""></h1>
+			<div class="">
+				<h1><img src="./images/common/menu.png" alt=""></h1>
+			</div>
 			<ul class="sidebar-menu">
 				<li>卓展とは</li>
 				<li>会場マップ</li>
