--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -72,6 +72,9 @@
 			</ul>
 		</nav>
 	</aside>
+	<footer id="footer">
+		<small class="copyright">&copy; 2016 卓展</small>
+	</footer>
 	<% include _script %>
 	<div class="box"></div>
 </body>
