--- a/app/source/scss/_setting.scss
+++ b/app/source/scss/_setting.scss
@@ -2,7 +2,10 @@
 $font-smoothing: antialiased;
 //auto,optimizeSpeed,optimizeLegibility,geometricPrecision
 $text-rendering: auto;
-$base-font-size: 14px;
-$base-font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
-$base-font-color: #333;
+$base-font-size: 15px;
+$base-font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+$base-font-color: #3e3a39;
 $base-background-color: #fff;
+
+$gray: #e1e6e6;
+$blue: #053077;
