--- a/app/source/scss/_setting.scss
+++ b/app/source/scss/_setting.scss
@@ -3,7 +3,7 @@ $font-smoothing: antialiased;
 //auto,optimizeSpeed,optimizeLegibility,geometricPrecision
 $text-rendering: auto;
 $base-font-size: 15px;
-$base-font-family: "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+$base-font-family: Arial, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
 $base-font-color: #3e3a39;
 $base-background-color: #fff;
 
