--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -10,6 +10,7 @@
 
 body {
 	background-color: #eff2f5;
+	letter-spacing: 1px;
 }
 
 #banner {
@@ -72,9 +73,21 @@ $sidebar: 330px;
 #main {
 	width: calc(100% - #{$sidebar});
 	float: right;
+	font-weight: bold;
 	.main-inner {
 		width: 870px;
 		margin: 0 auto;
+	}
+	h2 {
+		margin: 10px 0 50px 0;
+		text-align: center;
+	}
+}
+
+.about {
+	p {
+		margin: 30px 0;
+		line-height: 2.1em;
 	}
 }
 
@@ -91,11 +104,11 @@ $sidebar: 330px;
 				content: '';
 				display: block;
 				position: relative;
-				left: 25px;
-				bottom: 240px;
+				left: 20px;
+				bottom: 270px;
 				z-index: -1;
 				width: 100%;
-				height: 280px;
+				height: 290px;
 				background: repeat 0 0;
 			}
 			&.b::after {
@@ -107,16 +120,20 @@ $sidebar: 330px;
 			&.s::after {
 				background-image: url('../images/detail/bg/s.png');
 			}
+			&.mini::after {
+				height: 250px;
+				bottom: 230px;
+			}
 		}
 		.intro-text {
 			h3 {
-				font-size: 32px;
-				font-weight: bold;
-				margin-bottom: .8em;
+				font-size: 30px;
+				margin: .8em 0 .8em 0;
+				text-shadow: 3px 4px 0 rgba(255,255,255,1);
+				line-height: 1.1em;
 			}
 			p {
-				font-size: 16px;
-				line-height: 2em;
+				line-height: 1.95em;
 			}
 		}
 	}
@@ -132,10 +149,3 @@ $sidebar: 330px;
 	}
 }
 
-
-
-.about,
-.map,
-.access {
-	height: 50vh;
-}
