--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -26,7 +26,7 @@
 	</section>
 	<main id="main">
 		<div class="main-inner">
-			<section class="about" id="about">
+			<section class="about js-progress" id="about">
 				<h2><img src="./images/about/h2.png" alt="開催概要"></h2>
 				<h3><img src="./images/about/h3.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
 				<p>「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。<br>
@@ -35,12 +35,12 @@
 				<p>今年も見どころたっぷりの展示会ですので、是非お越しください。</p>
 				<p>日時：2016年8月19日(金)~8月21日(日)</p>
 			</section>
-			<section class="map" id="map">
+			<section class="map js-progress" id="map">
 				<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
 			</section>
 			<section class="intro" id="intro">
 				<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
-				<section id="branco" class="intro-detail js-parallax">
+				<section id="branco" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>ブランディングデザインを学ぶ。</h3>
 						<p>地域の商店街を参考に、店舗のブランドづくりの流れをグラフィックデザインの観点からみて学び、制作します。成果物は実在する店舗に新たな独自のコンセプトを設定したそれぞれのブランディングデザインに関わるもの全て。ロゴ、VI、パッケージなど必要なアプリケーションを、統一した世界観を持って制作することで様々な媒体への印刷の知識や素材の仕組みも勉強していきます。</p>
@@ -50,7 +50,7 @@
 					<div class="p-img2 s mini"><img src="./images/detail/branco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/branco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="brica" class="intro-detail js-parallax">
+				<section id="brica" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>プロダクト・インテリアデザインを学ぶ。</h3>
 						<p>この卓は、プロダクトデザイン視点から照明器具を作る卓です。テーマは、特別な時間を演出する照明で、自分の実体験や経験から様々なアイデアを展開していき、具体的なシーンを設定します。そこからセグメンテーションによって、照明の光り方・形を客観的に捉え、インテリアマッチの観点から素材・形状検討をし、最終製作へ移っていきます。芸工では、コンセプトワークや調査などの部分に時間をかける傾向にあるため、 本卓では" 作る”という工程に重きをおいています。</p>
@@ -60,7 +60,7 @@
 					<div class="p-img2 b mini"><img src="./images/detail/brica/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/brica/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="san65" class="intro-detail js-parallax">
+				<section id="san65" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>プロダクトデザインを基礎から学ぶ。</h3>
 						<p>プロダクトデザインを基礎から学び、体験する卓。<br>
@@ -71,7 +71,7 @@
 					<div class="p-img2 g mini"><img src="./images/detail/365/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 b"><img src="./images/detail/365/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="gafe" class="intro-detail js-parallax">
+				<section id="gafe" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>ゲーミフィケーションのなんとか</h3>
 						<p>チームそれぞれにおいて、まず現代社会に存在する問題点について様々な案を出し、その中から扱う社会問題を決定し、その社会問題をゲームを通してどう解決していくか、ゲームを通してユーザーに届けるためにはどういうゲームシステムにするかなど、ゲーミフィケーションの考えのもとゲームを制作を行っている卓です。</p>
@@ -81,7 +81,7 @@
 					<div class="p-img2 b mini"><img src="./images/detail/gafe/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 s"><img src="./images/detail/gafe/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="doodle" class="intro-detail js-parallax">
+				<section id="doodle" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>遊び心を取り入れたWeb制作</h3>
 						<p>Googleのアプリケーションに多く見られる遊び心を参考にし取り入れたWeb制作を行う卓です。Webサイト・アプリケーション・ゲームなどジャンルは問わず、個人制作・グループ制作も問いません。また、DoodleでのWeb制作は実践から入るので、UXデザインという小難しい考え方をより身近に感じることができます。</p>
@@ -91,7 +91,7 @@
 					<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="careco" class="intro-detail js-parallax">
+				<section id="careco" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>カーデザインを学ぶ。</h3>
 						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
@@ -101,7 +101,7 @@
 					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
-				<section id="irodori" class="intro-detail js-parallax">
+				<section id="irodori" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>色について学び、想像し、表現する。</h3>
 						<p>色について学ぶことで、色の持つ意味や効果を想像したり、他人と共有したり、自信や根拠を持った配色ができるようになることが目標である。制作では、グラフィックを考えたり、各々が表現に適すると思う素材を選択・加工したりしながら、そこで使用する色を意識した作品作りを行う。展示空間も、色を生かしたこだわりのあるものにしたいと考えている。</p>
@@ -113,7 +113,7 @@
 				</section>
 
 			</section>
-			<section class="access" id="access">
+			<section class="access js-progress" id="access">
 				<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
 				<p>バスのご利用をおすすめします</p>
 				<img src="./images/access/bus_detail.png" alt="バスを使ってくる場合">
@@ -122,14 +122,31 @@
 	</main>
 	<aside id="sidebar" class="static js-nav">
 		<nav>
-			<div class="">
-				<h1><img src="./images/common/menu.png" alt=""></h1>
+			<div class="progress">
+				<h1 class="progress-title"><img src="./images/common/menu.png" alt=""></h1>
+				<svg class="progress-dots js-progress-dots" width="265px" height="258px" viewBox="0 0 265 258">
+					<circle fill="#e1e6e6" cx="233.461" cy="4.5" r="4.5"/>
+					<circle fill="#e1e6e6" cx="247.972" cy="32.698" r="4.5"/>
+					<circle fill="#e1e6e6" cx="257.021" cy="63.313" r="4.5"/>
+					<circle fill="#e1e6e6" cx="259.832" cy="95.114" r="4.5"/>
+					<circle fill="#e1e6e6" cx="256.334" cy="126.848" r="4.5"/>
+					<circle fill="#e1e6e6" cx="246.582" cy="157.25" r="4.5"/>
+					<circle fill="#e1e6e6" cx="230.97" cy="185.102" r="4.5"/>
+					<circle fill="#e1e6e6" cx="210.164" cy="209.478" r="4.5"/>
+					<circle fill="#e1e6e6" cx="184.997" cy="228.967" r="4.5"/>
+					<circle fill="#e1e6e6" cx="156.424" cy="243.224" r="4.5"/>
+					<circle fill="#e1e6e6" cx="125.589" cy="251.491" r="4.5"/>
+					<circle fill="#e1e6e6" cx="93.727" cy="253.499" r="4.5"/>
+					<circle fill="#e1e6e6" cx="62.093" cy="249.199" r="4.5"/>
+					<circle fill="#e1e6e6" cx="31.953" cy="238.676" r="4.5"/>
+					<circle fill="#e1e6e6" cx="4.502" cy="222.363" r="4.5"/>
+				</svg>
 			</div>
-			<ul class="sidebar-menu">
-				<li>開催概要</li>
-				<li>会場マップ</li>
-				<li>卓の紹介</li>
-				<li>アクセス</li>
+			<ul class="gnav">
+				<li><a href="#about">開催概要</a></li>
+				<li><a href="#map">会場マップ</a></li>
+				<li><a href="#intro">卓の紹介</a></li>
+				<li><a href="#access">アクセス</a></li>
 			</ul>
 		</nav>
 	</aside>
