circleのプロパティをcss側で制御

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -125,21 +125,21 @@
 			<div class="progress">
 				<h1 class="progress-title"><img src="./images/common/menu.png" alt=""></h1>
 				<svg class="progress-dots js-progress-dots" width="265px" height="258px" viewBox="0 0 265 258">
-					<circle fill="#e1e6e6" cx="233.461" cy="4.5" r="4.5"/>
-					<circle fill="#e1e6e6" cx="247.972" cy="32.698" r="4.5"/>
-					<circle fill="#e1e6e6" cx="257.021" cy="63.313" r="4.5"/>
-					<circle fill="#e1e6e6" cx="259.832" cy="95.114" r="4.5"/>
-					<circle fill="#e1e6e6" cx="256.334" cy="126.848" r="4.5"/>
-					<circle fill="#e1e6e6" cx="246.582" cy="157.25" r="4.5"/>
-					<circle fill="#e1e6e6" cx="230.97" cy="185.102" r="4.5"/>
-					<circle fill="#e1e6e6" cx="210.164" cy="209.478" r="4.5"/>
-					<circle fill="#e1e6e6" cx="184.997" cy="228.967" r="4.5"/>
-					<circle fill="#e1e6e6" cx="156.424" cy="243.224" r="4.5"/>
-					<circle fill="#e1e6e6" cx="125.589" cy="251.491" r="4.5"/>
-					<circle fill="#e1e6e6" cx="93.727" cy="253.499" r="4.5"/>
-					<circle fill="#e1e6e6" cx="62.093" cy="249.199" r="4.5"/>
-					<circle fill="#e1e6e6" cx="31.953" cy="238.676" r="4.5"/>
-					<circle fill="#e1e6e6" cx="4.502" cy="222.363" r="4.5"/>
+					<circle cx="233.461" cy="4.5" />
+					<circle cx="247.972" cy="32.698" />
+					<circle cx="257.021" cy="63.313" />
+					<circle cx="259.832" cy="95.114" />
+					<circle cx="256.334" cy="126.848" />
+					<circle cx="246.582" cy="157.25" />
+					<circle cx="230.97" cy="185.102" />
+					<circle cx="210.164" cy="209.478" />
+					<circle cx="184.997" cy="228.967" />
+					<circle cx="156.424" cy="243.224" />
+					<circle cx="125.589" cy="251.491" />
+					<circle cx="93.727" cy="253.499" />
+					<circle cx="62.093" cy="249.199" />
+					<circle cx="31.953" cy="238.676" />
+					<circle cx="4.502" cy="222.363" />
 				</svg>
 			</div>
 			<ul class="gnav">
