--- a/app/source/ejs/_script.ejs
+++ b/app/source/ejs/_script.ejs
@@ -1,2 +1,3 @@
 <script src="./js/jquery.enllax.min.js"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=true"></script>
 <script src="./js/app.js"></script>
