--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -33,7 +33,24 @@
 					プロジェクトに賛同した人々が卓を囲むように集まることから「卓展」となりました。</p>
 				<p>学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。</p>
 				<p>今年も見どころたっぷりの展示会ですので、是非お越しください。</p>
-				<p>日時：2016年8月19日(金)~8月21日(日)</p>
+				<table>
+					<tr>
+						<td>日時：</td>
+						<td>2016年8月19日(金)~8月21日(日)</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>10:00~17:00(最終日~16:00)</td>
+					</tr>
+					<tr>
+						<td>会場：</td>
+						<td>名古屋市立大学 北千種キャンパス</td>
+					</tr>
+					<tr>
+						<td></td>
+						<td>名古屋市千種区北千種2‐1‐10</td>
+					</tr>
+				</table>
 			</section>
 			<section class="map js-progress" id="map">
 				<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
@@ -115,7 +132,7 @@
 			</section>
 			<section class="access js-progress" id="access">
 				<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
-				<p>バスのご利用をおすすめします</p>
+				<div class="bus-recommend"><img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span></div>
 				<img src="./images/access/bus_detail.png" alt="バスを使ってくる場合">
 			</section>
 		</div>
