プログレーションdotの現在の位置をちょっと大きく表示

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -101,6 +101,56 @@
 					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
 				</section>
+				<section id="careco" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>カーデザインを学ぶ。</h3>
+						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+				</section>
+				<section id="careco" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>カーデザインを学ぶ。</h3>
+						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+				</section>
+				<section id="careco" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>カーデザインを学ぶ。</h3>
+						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+				</section>
+				<section id="careco" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>カーデザインを学ぶ。</h3>
+						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+				</section>
+				<section id="careco" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>カーデザインを学ぶ。</h3>
+						<p>車をデザインする卓です。プロダクトデザインとカラーデザインの二種類から選んでもらい個人制作をします。プロダクトデザイン最終提案物は提案パネルとクレイモック、カラーデザインは提案パネルと外板モデル、簡単なモデルになります。週二回活動しており、火曜日は提案のプレゼン・エスキース等、金曜日はスケッチ力を向上するためにスケッチ会を行っています。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/careco/logo.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/careco/1.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0" data-enllax-type="foreground"></div>
+				</section>
 				<section id="irodori" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>色について学び、想像し、表現する。</h3>
@@ -125,22 +175,22 @@
 		<nav>
 			<div class="progress">
 				<h1 class="progress-title"><img src="./images/common/menu.png" alt=""></h1>
-				<svg class="progress-dots js-progress-dots" width="265px" height="258px" viewBox="0 0 265 258">
-					<circle cx="233.461" cy="4.5" />
-					<circle cx="247.972" cy="32.698" />
-					<circle cx="257.021" cy="63.313" />
-					<circle cx="259.832" cy="95.114" />
-					<circle cx="256.334" cy="126.848" />
-					<circle cx="246.582" cy="157.25" />
-					<circle cx="230.97" cy="185.102" />
-					<circle cx="210.164" cy="209.478" />
-					<circle cx="184.997" cy="228.967" />
-					<circle cx="156.424" cy="243.224" />
-					<circle cx="125.589" cy="251.491" />
-					<circle cx="93.727" cy="253.499" />
-					<circle cx="62.093" cy="249.199" />
-					<circle cx="31.953" cy="238.676" />
-					<circle cx="4.502" cy="222.363" />
+				<svg class="progress-dots js-progress-dots" width="330px" height="330px">
+					<circle cx="238" cy="10" />
+					<circle cx="253" cy="38" />
+					<circle cx="262" cy="68" />
+					<circle cx="265" cy="100" />
+					<circle cx="261" cy="132" />
+					<circle cx="252" cy="162" />
+					<circle cx="236" cy="190" />
+					<circle cx="215" cy="214" />
+					<circle cx="190" cy="234" />
+					<circle cx="161" cy="248" />
+					<circle cx="131" cy="256" />
+					<circle cx="99" cy="258" />
+					<circle cx="67" cy="254" />
+					<circle cx="37" cy="244" />
+					<circle cx="10" cy="227" />
 				</svg>
 			</div>
 			<ul class="gnav">
